[package]
name = "timekit"
version = "0.1.1"
authors = ["StatPan <statpan@naver.com>"]
edition = "2021"
description = "A simple Rust library for working with timezones and displaying current time in multiple zones."
license = "MIT"
repository = "https://github.com/StatPan/timekit"
documentation = "https://docs.rs/timekit"
homepage = "https://statpan.com"

[dependencies]
